Added springfox swagger, REST api for validation via swagger-codegen. Reenabled INFO and Warn validation for 1.0.
