# webapp/src/main/java/de/isas/mztab1_1/server/api/ValidateApi.java
@@ -1,0 +1,79 @@
+/**
+ * NOTE: This class is auto generated by the swagger code generator program (2.3.0).
+ * https://github.com/swagger-api/swagger-codegen
+ * Do not edit the class manually.
+ */
+package de.isas.mztab1_1.server.api;
+
+import de.isas.mztab1_1.model.Error;
+import de.isas.mztab1_1.model.MzTab;
+import de.isas.mztab1_1.model.ValidationMessage;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import io.swagger.annotations.*;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RequestPart;
+import org.springframework.web.multipart.MultipartFile;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+import java.io.IOException;
+import java.util.List;
+import java.util.Optional;
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-01-11T19:50:29.849+01:00")
+
+@Api(value = "validate", description = "the validate API")
+@RequestMapping(path = "/rest/v1_1")
+public interface ValidateApi {
+
+    Logger log = LoggerFactory.getLogger(ValidateApi.class);
+
+    default Optional<ObjectMapper> getObjectMapper() {
+        return Optional.empty();
+    }
+
+    default Optional<HttpServletRequest> getRequest() {
+        return Optional.empty();
+    }
+
+    default Optional<String> getAcceptHeader() {
+        return getRequest().map(r -> r.getHeader("Accept"));
+    }
+
+    @ApiOperation(value = "", nickname = "validateMzTabFile", notes = "Validates an mzTab file in XML or JSON representation and reports syntactic, structural, and semantic errors. ", response = ValidationMessage.class, responseContainer = "List", tags={ "validate", })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "Validation Okay", response = ValidationMessage.class, responseContainer = "List"),
+        @ApiResponse(code = 405, message = "Invalid input", response = ValidationMessage.class, responseContainer = "List"),
+        @ApiResponse(code = 415, message = "Unsupported content type"),
+        @ApiResponse(code = 200, message = "Unexpected error", response = Error.class) })
+    @RequestMapping(value = "/validate",
+        produces = { "application/json" }, 
+        consumes = { "application/json", "application/xml" },
+        method = RequestMethod.POST)
+    default ResponseEntity<List<ValidationMessage>> validateMzTabFile(@ApiParam(value = "mzTab file that should be validated." ,required=true )  @Valid @RequestBody MzTab mztabfile) {
+        if(getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
+            if (getAcceptHeader().get().contains("application/json")) {
+                try {
+                    return new ResponseEntity<>(getObjectMapper().get().readValue("[ {  \"code\" : \"code\",  \"line_number\" : 0,  \"message_type\" : \"information\",  \"message\" : \"message\"}, {  \"code\" : \"code\",  \"line_number\" : 0,  \"message_type\" : \"information\",  \"message\" : \"message\"} ]", List.class), HttpStatus.NOT_IMPLEMENTED);
+                } catch (IOException e) {
+                    log.error("Couldn't serialize response for content type application/json", e);
+                    return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
+                }
+            }
+        } else {
+            log.warn("ObjectMapper or HttpServletRequest not configured in default ValidateApi interface so no example is generated");
+        }
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+    }
+
+}
